Apply spacing correctly to top of Discord, fix settings button snippet

--- a/_index.scss
+++ b/_index.scss
@@ -64,6 +64,7 @@ $colours: (
   --brand-experiment-500: var(--amethyst-brand);
   --control-brand-foreground: var(--amethyst-primary);
   --font-display: var(--font-family) !important; // Sorry katlyn
+  --status-positive-background: var(--amethyst-green);
 
   --amethyst-padding: 4px;
   --amethyst-margin: 4px;
